--- a/index.html
+++ b/index.html
@@ -8,8 +8,11 @@
 </head>
 <body>
     <h1>This is the first RNA website!</h1>
-    <p>
-        This is literally the most bad ass website of all time.
+    <p >
+        This is literally the most bad ass website of all time. seriously... <br>Or, at least top:
+        <p id="output"></p>
+        <script src="first_website_frontend"></script>
     </p>
+    
 </body>
 </html>
