--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
     <h1>This is the first RNA website!</h1>
     <p >
-        This is literally the most bad ass website of all time. seriously... <br>Or, at least top:
+        This is literally the most bad ass website of all time. seriously...
         <p id="output"></p>
         <script src="first_website_frontend"></script>
     </p>
